base-item: Make sure we unref the PrintOperation object

https://bugzilla.gnome.org/show_bug.cgi?id=763500